Platform: Make accelerator conditional on crypto
Change-Id: I0c6aafa4052c218d03f829aaf600f6f67a67f4c3
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/accelerator/CMakeLists.txt
+++ b/platform/ext/accelerator/CMakeLists.txt
@@ -13,7 +13,9 @@ endif()
 if(BL2)
     add_library(bl2_crypto_hw STATIC)
 endif()
+if (TFM_PARTITION_CRYPTO)
 add_library(crypto_service_crypto_hw STATIC)
+endif()
 
 add_subdirectory(${CRYPTO_HW_ACCELERATOR_TYPE})
 
@@ -47,12 +49,14 @@ endif()
 
 ############################ Crypto Service ####################################
 
-target_include_directories(crypto_service_crypto_hw
-    PUBLIC
-        interface
-)
+if (TFM_PARTITION_CRYPTO)
+    target_include_directories(crypto_service_crypto_hw
+        PUBLIC
+            interface
+    )
 
-target_compile_definitions(crypto_service_crypto_hw
-    PUBLIC
-        CRYPTO_HW_ACCELERATOR
-)
+    target_compile_definitions(crypto_service_crypto_hw
+        PUBLIC
+            CRYPTO_HW_ACCELERATOR
+    )
+endif()
