Attest: Improve attestation implementation
- Fix the conditional check flags of IAK usage setting in
  tfm_plat_builtin_key_get_usage().
  tfm_plat_builtin_key_get_usage() permits non-secure clients to access
  IAK public key for signature verification only if secure test service
  is enabled. Therefore, non-secure attestation regression tests will
  fail if secure regression tests are not enabled.
  Replace secure test service flag with TEST_S/NS_ATTESTATION.
- Change flags INCLUDE_COSE_KEY_ID to ATTEST_INCLUDE_COSE_KEY_ID to
  keep alignment in TF-M.

Signed-off-by: David Hu <david.hu@arm.com>
Change-Id: I526d50d6048af76d18582c090c0a25fbb0029cff

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -166,6 +166,8 @@ if(TFM_PARTITION_CRYPTO)
         PRIVATE
             $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
             $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:PLATFORM_DEFAULT_OTP>
+            $<$<BOOL:${TEST_S_ATTESTATION}>:TEST_S_ATTESTATION>
+            $<$<BOOL:${TEST_NS_ATTESTATION}>:TEST_NS_ATTESTATION>
     )
 
     target_compile_options(platform_crypto_keys
