Attest: Set features with config header file
Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: Ida7dd261415ac660a425931624a658d766745b91

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -114,6 +114,7 @@ if(BL2)
     target_link_libraries(platform_bl2
         PRIVATE
             bl2_crypto_hw
+            tfm_config
     )
 
     target_link_libraries(${CC312_LIB_PREFIX}cc312_cdmpu
