Tools: Add support to include STACK SIZE from header file
Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: Ic9c7405c2b81278f207ad8031bb466b322134146

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -12,6 +12,7 @@
 
 #include <stdint.h>
 #include <stddef.h>
+#include "config_tfm.h"
 #include "region.h"
 #include "region_defs.h"
 #include "spm_ipc.h"
