PS: Set features with config header file
Signed-off-by: Xinyu Zhang <xinyu.zhang@arm.com>
Change-Id: I2d9686f60f4d1254e76a4acac792364c85ccba0b

--- a/secure_fw/partitions/protected_storage/CMakeLists.txt
+++ b/secure_fw/partitions/protected_storage/CMakeLists.txt
@@ -53,6 +53,7 @@ target_link_libraries(tfm_app_rot_partition_ps
     PRIVATE
         secure_fw
         platform_s
+        tfm_config
         tfm_sprt
 )
 
