Add possibility for platforms to define linker sections alignment
Some platforms may use different protection hardware (e.g. MPC) which
may require different alignment of linker sections. Also alignment size
may be dependent on the type of memory section is located in.

This patch adds a possibility for platforms to define needed linker
sections alignment. Platforms can define custom alignment in
region_defs.h file.

Alignment value can be changed for one or multiple sections using
appropriate macros.

Note that alignment macros are provided only for sections that use
alignment for protection hardware related reasons. Sections that use
alignment for other reasons (e.g. word alignment for better memory
access) has no need to be custom alienable thus align macros are not
provided for them.

Signed-off-by: Bohdan Hunko <Bohdan.Hunko@infineon.com>
Signed-off-by: Chris Brand <chris.brand@cypress.com>
Change-Id: Ic36e06b4a8a3bed922bbfb3e5651cf5a2abe95bc

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -296,3 +296,8 @@ target_compile_definitions(platform_region_defs
         $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:ENABLE_HEAP>
         PLATFORM_NS_NV_COUNTERS=${TFM_NS_NV_COUNTER_AMOUNT}
 )
+
+target_include_directories(platform_region_defs
+    INTERFACE
+        ${CMAKE_CURRENT_LIST_DIR}/ext/common
+)
