--- a/platform/ext/common/iar/tfm_isolation_l3.icf.template
+++ b/platform/ext/common/iar/tfm_isolation_l3.icf.template
@@ -29,9 +29,15 @@
  */
 
 #include "region_defs.h"
+
+/* Include file with definitions for section alignments.
+ * Note: it should be included after region_defs.h to let platform define
+ * default values if needed. */
+#include "tfm_s_linker_alignments.h"
+
 /* position tag block : code + RO-data */
-define block PT_RO_START with alignment = 32, size = 0 { };
-define block PT_RO_END with alignment = 32, size = 0 { };
+define block PT_RO_START with alignment = TFM_LINKER_PT_RO_ALIGNMENT, size = 0 { };
+define block PT_RO_END with alignment = TFM_LINKER_PT_RO_ALIGNMENT, size = 0 { };
 
 define block ER_VECTORS with size = S_CODE_VECTOR_TABLE_SIZE {
        readonly section .intvec
@@ -40,12 +46,12 @@ define block ER_VECTORS with size = S_CODE_VECTOR_TABLE_SIZE {
 #ifdef CONFIG_TFM_USE_TRUSTZONE
     /*
      * Place the CMSE Veneers (containing the SG instruction) in a separate
-     * 32 bytes aligned region so that the SAU can be programmed to
+     * at least 32 bytes aligned region so that the SAU can be programmed to
      * just set this region as Non-Secure Callable.
      */
-define block ER_VENEER with alignment = 0x20 {section Veneer$$CMSE};
+define block ER_VENEER with alignment = TFM_LINKER_VENEERS_ALIGNMENT {section Veneer$$CMSE};
 
-define block VENEER_ALIGN with alignment = 0x20, size = 0 { };
+define block VENEER_ALIGN with alignment = TFM_LINKER_VENEERS_ALIGNMENT, size = 0 { };
 #endif
 
 define block ER_TFM_CODE with fixed order, alignment = 8 {
@@ -84,7 +90,7 @@ place at address S_CODE_SRAM_ALIAS_BASE { block ER_CODE_SRAM };
 
 /**** blocks CODE + RO-data definition starts here */
 {% for partition in partitions %}
-define block ER_{{partition.manifest.name}}_RO  with alignment = 32
+define block ER_{{partition.manifest.name}}_RO  with alignment = {{ 'TFM_LINKER_PSA_ROT_LINKER_CODE_ALIGNMENT' if partition.manifest.type == 'PSA-ROT' else 'TFM_LINKER_APP_ROT_LINKER_CODE_ALIGNMENT' }}
 {
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
@@ -108,19 +114,18 @@ define block ER_{{partition.manifest.name}}_RO  with alignment = 32
 /**** blocks CODE + RO-data definition ends here*/
 
 /**** Block Unprivileged Secure code + RO-data definition starts here */
-define block TFM_UNPRIV_CODE with alignment = 32 {
+define block TFM_UNPRIV_CODE with alignment = TFM_LINKER_UNPRIV_CODE_ALIGNMENT {
     section SFN,
     readonly
 };
 
 
 /* position tag block : base address of secure data area ( S_DATA_START)*/
-define block PT_SECURE_DATA_START with alignment = 32, size = 0 { };
-define block PT_PRIV_RWZI_START with alignment = 32, size = 0 { };
+define block PT_SECURE_DATA_START with alignment = TFM_LINKER_SECURE_DATA_ALIGNMENT, size = 0 { };
+define block PT_PRIV_RWZI_START with alignment = TFM_LINKER_PT_PRIV_RWZI_ALIGNMENT, size = 0 { };
 
-define block TFM_SHARED_DATA with alignment = 32, size = BOOT_TFM_SHARED_DATA_SIZE { };
-define block ARM_LIB_STACK with alignment = 32, size = S_MSP_STACK_SIZE - 0x8 { };
-
+define block TFM_SHARED_DATA with alignment = TFM_LINKER_BL2_SHARED_DATA_ALIGNMENT, size = BOOT_TFM_SHARED_DATA_SIZE { };
+define block ARM_LIB_STACK with alignment = TFM_LINKER_MSP_STACK_ALIGNMENT, size = S_MSP_STACK_SIZE - 0x8 { };
 define block STACKSEAL with size = 0x8 { };
 
 #if defined(ENABLE_HEAP)
@@ -153,9 +158,9 @@ keep {block ER_PART_RT_POOL, block ER_SERV_RT_POOL};
 {% for partition in partitions %}
     {% if partition.manifest.type == 'PSA-ROT' %}
     /* Position  tag : start Block :*/
-    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_START with alignment = 32, size = 0 { };
+    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_START with alignment = TFM_LINKER_PSA_ROT_LINKER_DATA_ALIGNMENT, size = 0 { };
 
-    define block ER_{{partition.manifest.name}}_RWZI with alignment = 32 {
+    define block ER_{{partition.manifest.name}}_RWZI with alignment = TFM_LINKER_PSA_ROT_LINKER_DATA_ALIGNMENT {
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
 	rw section .data object {{pattern}},
@@ -171,19 +176,19 @@ keep {block ER_PART_RT_POOL, block ER_SERV_RT_POOL};
 	section {{partition.manifest.name}}_PSA-ROT_ATTR_ZI,
 };
 /* Position  tag : start Block :*/
-    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_END with alignment = 32, size = 0 { };
+    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_END with alignment = TFM_LINKER_PSA_ROT_LINKER_DATA_ALIGNMENT, size = 0 { };
     {% endif %}
 {% endfor %}
 
 /**** block Position tag  PSA RoT RWZI ends definition  */
-define block PT_PRIV_RWZI_END with alignment = 32, size = 0 { };
+define block PT_PRIV_RWZI_END with alignment = TFM_LINKER_PT_PRIV_RWZI_ALIGNMENT, size = 0 { };
 
 {% for partition in partitions %}
     {% if partition.manifest.type == 'APPLICATION-ROT' %}
     /* Position  tag : start Block :*/
-    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_START with alignment = 32, size = 0 { };
+    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_START with alignment = TFM_LINKER_APP_ROT_LINKER_DATA_ALIGNMENT, size = 0 { };
 
-    define block ER_{{partition.manifest.name}}_RWZI with alignment = 32 {
+    define block ER_{{partition.manifest.name}}_RWZI with alignment = TFM_LINKER_APP_ROT_LINKER_DATA_ALIGNMENT {
     {% if partition.attr.linker_pattern.library_list %}
         {% for pattern in partition.attr.linker_pattern.library_list %}
 	rw section .data object {{pattern}},
@@ -199,21 +204,21 @@ define block PT_PRIV_RWZI_END with alignment = 32, size = 0 { };
 	section {{partition.manifest.name}}_APP-ROT_ATTR_ZI,
 };
 /* Position  tag : start Block :*/
-    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_END with alignment = 32, size = 0 { };
+    define block PT_{{partition.manifest.name}}_PRIVATE_DATA_END with alignment = TFM_LINKER_APP_ROT_LINKER_DATA_ALIGNMENT, size = 0 { };
     {% endif %}
 {% endfor %}
 
 #if defined(CONFIG_TFM_PARTITION_META)
-define block TFM_SP_META_PTR with alignment = 32 {
+define block TFM_SP_META_PTR with alignment = TFM_LINKER_SP_META_PTR_ALIGNMENT {
     zi section .bss.SP_META_PTR_SPRTL_INST
        };
 #endif
 
 #ifdef RAM_VECTORS_SUPPORT
-define block ER_RAM_VECTORS      with alignment = 256 { section .ramvec };
+define block ER_RAM_VECTORS      with alignment = TFM_LINKER_RAM_VECTORS_ALIGNMENT { section .ramvec };
 #endif
 
-define block PT_SRAM_WATERMARK with alignment = 32, size = 0 { };
+define block PT_SRAM_WATERMARK with alignment = TFM_LINKER_SECURE_DATA_ALIGNMENT, size = 0 { };
 
 /* Define Flash content */
 define block LR_CODE with fixed order {
