BL2: Add MCUBOOT_BOOTSTRAP support
With this option, installing images from secondary slot with empty
primary slot is possible (i.e with MCUBOOT_ENC_IMAGES and UPGRADE_STRATEGY
in SWAP, encrypted images can be installed from secondary slot on
a virgin board)

Change-Id: I9be99c1dc66393317102060c44523748664126e1
Signed-off-by: Michel Jaouen <michel.jaouen@st.com>

--- a/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
+++ b/bl2/ext/mcuboot/include/mcuboot_config/mcuboot_config.h.in
@@ -37,6 +37,7 @@ extern "C" {
 #cmakedefine MCUBOOT_MEASURED_BOOT
 #cmakedefine MCUBOOT_DATA_SHARING
 
+#cmakedefine MCUBOOT_BOOTSTRAP
 /*
  * Maximum size of the measured boot record.
  *
