Platform: Add configurable flash sizes to Corstone-310
Add possibility to configure flash partition sizes in Corstone-310
using FLASH_S_PARTITION_SIZE and FLASH_NS_PARTITION_SIZE.

Change-Id: I0429d86f38be45f4fb793c982574cebbdacb2c6a
Signed-off-by: Gabor Toth <gabor.toth@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -300,3 +300,8 @@ target_include_directories(platform_region_defs
     INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/ext/common
 )
+
+target_link_libraries(platform_region_defs
+    INTERFACE
+        tfm_config
+)
