QCBOR: Disable QCBOR float usage
Disable the QCBOR float usage.
In toolchains without fenv support this will cause a compilation error
because of the FE exception types e.g. FE_DIVBYZERO are not defined
in the fenv.h headers.
Float types are not currently used by the dependencies of QCBOR so this
should be fine and generates a small code decrease.

Change-Id: I537b283188cfab2cf4cc22890da7b9e479fd71fc
Signed-off-by: Joakim Andersson <joakim.andersson@nordicsemi.no>

--- a/lib/ext/qcbor/CMakeLists.txt
+++ b/lib/ext/qcbor/CMakeLists.txt
@@ -38,6 +38,11 @@ target_sources(tfm_qcbor_s
         ${QCBOR_PATH}/src/UsefulBuf.c
 )
 
+target_compile_definitions(tfm_qcbor_s
+    PRIVATE
+        QCBOR_DISABLE_FLOAT_HW_USE
+)
+
 target_include_directories(tfm_qcbor_s
     PUBLIC
         $<BUILD_INTERFACE:${QCBOR_PATH}/inc>
