QCBOR: rely on the upstream CMakeLists.txt
Change-Id: If2b6c27e89c163d6358492965e92104fc4ee8eae
Signed-off-by: David Vincze <david.vincze@arm.com>

--- a/lib/ext/qcbor/CMakeLists.txt
+++ b/lib/ext/qcbor/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2023, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -12,7 +12,13 @@ set(FETCHCONTENT_QUIET FALSE)
 
 # Default configuration of QCBOR repository
 set(QCBOR_PATH      "DOWNLOAD"  CACHE PATH      "Path to qcbor (or DOWNLOAD to fetch automatically")
-set(QCBOR_VERSION   "b0e70332"  CACHE STRING    "The version of qcbor to use")
+set(QCBOR_VERSION   "92d3f890"  CACHE STRING    "The version of qcbor to use")
+
+# Entirely disable the floating-point support
+# in the qcbor library to reduce code size.
+set(QCBOR_OPT_DISABLE_FLOAT_HW_USE     ON  CACHE BOOL  "Eliminate dependency on FP hardware and FP instructions" FORCE)
+set(QCBOR_OPT_DISABLE_FLOAT_PREFERRED  ON  CACHE BOOL  "Eliminate support for half-precision and CBOR preferred serialization" FORCE)
+set(QCBOR_OPT_DISABLE_FLOAT_ALL        ON  CACHE BOOL  "Eliminate floating-point support completely" FORCE)
 
 if ("${QCBOR_PATH}" STREQUAL "DOWNLOAD")
     FetchContent_Declare(qcbor
@@ -28,36 +34,16 @@ if ("${QCBOR_PATH}" STREQUAL "DOWNLOAD")
     endif()
 endif()
 
-add_library(tfm_qcbor_s STATIC EXCLUDE_FROM_ALL)
+add_subdirectory(${QCBOR_PATH} ${CMAKE_CURRENT_BINARY_DIR}/QCBOR)
 
-target_sources(tfm_qcbor_s
-    PRIVATE
-        ${QCBOR_PATH}/src/ieee754.c
-        ${QCBOR_PATH}/src/qcbor_encode.c
-        ${QCBOR_PATH}/src/qcbor_decode.c
-        ${QCBOR_PATH}/src/UsefulBuf.c
-)
+set_target_properties(qcbor PROPERTIES EXCLUDE_FROM_ALL TRUE)
 
-target_compile_definitions(tfm_qcbor_s
-    PRIVATE
-        QCBOR_DISABLE_FLOAT_HW_USE
-)
-
-target_include_directories(tfm_qcbor_s
+target_compile_options(qcbor
     PUBLIC
-        $<BUILD_INTERFACE:${QCBOR_PATH}/inc>
+        ${COMPILER_CP_FLAG}
+)
+
+target_include_directories(qcbor
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
-        $<BUILD_INTERFACE:${QCBOR_PATH}/inc/qcbor>
-)
-
-target_link_libraries(tfm_qcbor_s
-    PRIVATE
-        tfm_attestation_defs
-        tfm_t_cose_defs
-)
-
-target_compile_options(tfm_qcbor_s
-    PRIVATE
-        ${COMPILER_CP_FLAG}
 )
