--- a/lib/ext/t_cose/CMakeLists.txt
+++ b/lib/ext/t_cose/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2023, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -54,8 +54,8 @@ target_link_libraries(tfm_t_cose_s
     PUBLIC
         tfm_t_cose_common
         tfm_t_cose_defs
-        tfm_qcbor_s
         psa_interface
+        qcbor
 )
 
 target_compile_options(tfm_t_cose_s
