--- a/Kconfig
+++ b/Kconfig
@@ -14,18 +14,19 @@ menu "SPM"
 config TFM_ISOLATION_LEVEL
     int "Isolation level"
     default 1
+    range 1 1 if TFM_SPM_BACKEND_SFN
     range 1 3 if PLATFORM_HAS_ISOLATION_L3_SUPPORT
     range 1 2
 
 choice
     prompt "SPM Backend"
-
-    config TFM_SPM_BACKEND_IPC
-        bool "IPC Backend"
+    default TFM_SPM_BACKEND_SFN
 
     config TFM_SPM_BACKEND_SFN
         bool "SFN Backend"
 
+    config TFM_SPM_BACKEND_IPC
+        bool "IPC Backend"
 endchoice
 
 config CONFIG_TFM_SPM_BACKEND
@@ -72,12 +73,6 @@ rsource "secure_fw/partitions/Kconfig"
 
 rsource "platform/Kconfig"
 
-################################# NS ###########################################
-
-config NS
-    bool "NS app"
-    default y
-
 ################################# TEST #########################################
 
 menu "TF-M tests"
@@ -87,9 +82,9 @@ endmenu
 
 ################################# Component ####################################
 
-# These configs in this menu are are local to a component or externally
-# referenced when components are coupled. Usually, such options are located in
-# C header file. The Header File Config System has more details about it.
+# These configs in this menu are local to a component or externally referenced
+# when components are coupled. Usually, such options are located in C header
+# file. The Header File Config System has more details about it.
 
 # Other configs above which are not in component menu are TF-M build options to
 # select which file or component to include into compilation. These are options,
