--- a/lib/ext/psa_arch_tests/Kconfig
+++ b/lib/ext/psa_arch_tests/Kconfig
@@ -8,8 +8,7 @@
 menu "PSA Arch Test"
 
 choice
-    prompt "Which (if any) of the PSA API tests should be compiled"
-    depends on !(TFM_S_REG_TEST || TFM_NS_REG_TEST)
+    prompt "PSA API Test Suite"
 
     config TEST_PSA_API_NONE
         bool "None"
@@ -19,29 +18,39 @@ choice
 
     config TEST_PSA_API_CRYPTO
         bool "Crypto"
-        depends on TFM_PARTITION_CRYPTO
+        imply TFM_PARTITION_CRYPTO
+        imply TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+        imply TFM_PARTITION_PLATFORM
 
     config TEST_PSA_API_INITIAL_ATTESTATION
         bool "Initial attestation"
-        depends on TFM_PARTITION_INITIAL_ATTESTATION
+        imply TFM_PARTITION_INITIAL_ATTESTATION
+        imply TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+        imply TFM_PARTITION_CRYPTO
+        imply TFM_PARTITION_PLATFORM
 
     config TEST_PSA_API_INTERNAL_TRUSTED_STORAGE
         bool "Internal trusted storage"
-        depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+        imply TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
 
     config TEST_PSA_API_PROTECTED_STORAGE
         bool "Protected storage"
-        depends on TFM_PARTITION_PROTECTED_STORAGE
+        imply TFM_PARTITION_PROTECTED_STORAGE
+        imply TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+        imply TFM_PARTITION_CRYPTO
+        imply TFM_PARTITION_PLATFORM
 
     config TEST_PSA_API_STORAGE
         bool "Storage(ITS+PS)"
-        depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PROTECTED_STORAGE
+        imply TFM_PARTITION_PROTECTED_STORAGE
+        imply TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+        imply TFM_PARTITION_CRYPTO
+        imply TFM_PARTITION_PLATFORM
 
 endchoice
 
 config TEST_PSA_API
     string
-    depends on !(TFM_S_REG_TEST || TFM_NS_REG_TEST)
     default "" if TEST_PSA_API_NONE
     default "IPC" if TEST_PSA_API_IPC
     default "CRYPTO" if TEST_PSA_API_CRYPTO
