--- a/secure_fw/partitions/Kconfig
+++ b/secure_fw/partitions/Kconfig
@@ -6,53 +6,52 @@
 #-------------------------------------------------------------------------------
 
 menu "Secure partitions"
+
+################################# Crypto #######################################
+
+comment "Crypto depends on ITS"
+    depends on !TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
+
 config TFM_PARTITION_CRYPTO
     bool "Crypto"
-    default y
+    depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
 
-if TFM_PARTITION_CRYPTO
+################################# Attestation ##################################
 
-    config CRYPTO_HW_ACCELERATOR
-        bool "Enable the crypto hardware accelerator"
-        default n
-
-    config CRYPTO_TFM_BUILTIN_KEYS_DRIVER
-        bool "Allow crypto service to store builtin keys"
-        default y
-        help
-          Whether to allow crypto service to store builtin keys. Without this,
-          all builtin keys must be stored in a platform-specific location.
-endif
+comment "Initial attestation depends on Crypto"
+    depends on !TFM_PARTITION_CRYPTO
 
 config TFM_PARTITION_INITIAL_ATTESTATION
     bool "Initial attestation"
-    default y
+    depends on TFM_PARTITION_CRYPTO
+
+################################# ITS ##########################################
 
 config TFM_PARTITION_INTERNAL_TRUSTED_STORAGE
     bool "Internal Trusted Storage"
-    default y
+    default n
+
+################################# Platform #####################################
 
 config TFM_PARTITION_PLATFORM
     bool "Platform"
-    default y
+    default n
 
-comment "Firmware update depends on partition Platform"
-    depends on !TFM_PARTITION_PLATFORM
+################################# FWU ##########################################
+
+comment "Firmware update depends on Crypto and Platform, and FWU support"
+    depends on !(TFM_PARTITION_PLATFORM && TFM_PARTITION_CRYPTO && PLATFORM_HAS_FIRMWARE_UPDATE_SUPPORT)
 
 config TFM_PARTITION_FIRMWARE_UPDATE
     bool "Firmware update"
-    default n
-    depends on TFM_PARTITION_PLATFORM
+    depends on TFM_PARTITION_PLATFORM && TFM_PARTITION_CRYPTO && PLATFORM_HAS_FIRMWARE_UPDATE_SUPPORT
 
-comment "Protected Storage depends on partition ITS and Platform"
-    depends on !(TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PLATFORM)
+################################# PS ###########################################
+
+comment "Protected Storage depends on Crypto, ITS and Platform"
+    depends on !(TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PLATFORM && TFM_PARTITION_CRYPTO)
 
 config TFM_PARTITION_PROTECTED_STORAGE
     bool "Protected Storage"
-    default y
-    depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PLATFORM
-    help
-      PS only uses the platform partition when PS_ROLLBACK_PROTECTION is ON,
-      but the dependency in the manifest file means the dependency is
-      unconditional.
+    depends on TFM_PARTITION_INTERNAL_TRUSTED_STORAGE && TFM_PARTITION_PLATFORM && TFM_PARTITION_CRYPTO
 endmenu
