--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -1,5 +1,5 @@
 ;/*
-; * Copyright (c) 2009-2022 Arm Limited
+; * Copyright (c) 2009-2023 Arm Limited
 ; * Copyright (c) 2022 Cypress Semiconductor Corporation (an Infineon company)
 ; * or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 ; *
@@ -35,8 +35,8 @@ MEMORY
 {
   FLASH    (rx)  : ORIGIN = S_CODE_START, LENGTH = S_CODE_SIZE
   RAM      (rwx) : ORIGIN = S_DATA_START, LENGTH = S_DATA_SIZE
-#if defined(S_CODE_SRAM_ALIAS_BASE)
-  CODE_RAM (rwx) : ORIGIN = S_CODE_SRAM_ALIAS_BASE, LENGTH = TOTAL_CODE_SRAM_SIZE
+#if defined(S_RAM_CODE_START)
+  CODE_RAM (rwx) : ORIGIN = S_RAM_CODE_START, LENGTH = S_RAM_CODE_SIZE
 #endif
 }
 
@@ -98,11 +98,12 @@ SECTIONS
         LONG (ADDR(.ER_{{partition.manifest.name}}_RWZI))
         LONG (SIZEOF(.ER_{{partition.manifest.name}}_RWZI) / 4)
 {% endfor %}
-#if defined(S_CODE_SRAM_ALIAS_BASE)
+#if defined(S_RAM_CODE_START)
         LONG (LOADADDR(.ER_EFLASH_DRIVER_RO))
         LONG (ADDR(.ER_EFLASH_DRIVER_RO))
         LONG (SIZEOF(.ER_EFLASH_DRIVER_RO) / 4)
 #endif
+
         __copy_table_end__ = .;
     } > FLASH
 
@@ -192,15 +193,13 @@ SECTIONS
 {% endfor %}
     /**** APPLICATION RoT RO CODE + data ends here */
 
-#if defined(S_CODE_SRAM_ALIAS_BASE)
-    .ER_EFLASH_DRIVER_RO : ALIGN(4)
+#if defined(S_RAM_CODE_START)
+    /* Flash drivers code that gets copied from Flash */
+    .ER_CODE_SRAM : ALIGN(4)
     {
-        *Driver_GFC100_EFlash.o(.text*)
-        *Driver_GFC100_EFlash.o(.rodata*)
-        *gfc100_eflash_drv.o(.text*)
-        *gfc100_eflash_drv.o(.rodata*)
-        *musca_b1_eflash_drv.o(.text*)
-        *musca_b1_eflash_drv.o(.rodata*)
+        *libflash_drivers*:*(.text*)
+        *libflash_drivers*:*(.rodata*)
+        KEEP(*(.ramfunc))
         . = ALIGN(4); /* This alignment is needed to make the section size 4 bytes aligned */
     } > CODE_RAM AT > FLASH
     Image$$ER_EFLASH_DRIVER_RO$$Base = ADDR(.ER_EFLASH_DRIVER_RO);
