Build: Fix out of tree build issues for some repo
Current configuration only allows libmetal, open-amp and psa-adac
repositories to be build in source tree.
Update the configuration so that can be built out of source tree
and don't have to be cloned/downloaded if explicit path is provided.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Iac306de683688a9e0d2ee5c3328ca71b019b5b9e

--- a/lib/ext/psa-adac/CMakeLists.txt
+++ b/lib/ext/psa-adac/CMakeLists.txt
@@ -16,6 +16,10 @@ fetch_remote_library(
         GIT_TAG             ${PLATFORM_PSA_ADAC_VERSION}
 )
 
+if (NOT LIB_BINARY_PATH_VAR)
+set(PLATFORM_PSA_ADAC_BUILD_PATH "${CMAKE_SOURCE_DIR}/build/lib/ext/libpsaadac-build" CACHE PATH "Path to build directory of psa-adac.")
+endif()
+
 set(PSA_ADAC_TARGET "trusted-firmware-m")
 set(PSA_ADAC_MBEDTLS_INCLUDE "${MBEDCRYPTO_PATH}/include")
 set(PSA_ADAC_TOOLCHAIN    FALSE    CACHE BOOL "Whether to use psa-adac toolchain." FORCE)
